<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:id="@+id/layoutHolder"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/boxbg">

        <TextView
            android:id="@+id/view_name"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/due_date"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="51dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/courses"
            android:textColor="#B5CAAE"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>